--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
-layout: splash
-title: "José Zurita-Tapia"
-permalink: /
+# You don't need to edit this file, it's empty on purpose.
+# Edit theme's home layout instead if you wanna make some changes
+# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
+layout: home
+author_profile: true
 ---
-
-{% include feature_row %}
